--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Café Bio le Vivarium</title>
-    <link rel="stylesheet" href="./Ressources/style.css">
+    <link rel="stylesheet" href="./Ressources/test_compa.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Merriweather:ital@0;1&display=swap">
     <link rel="shortcut icon" type="image/x-icon" href="./Ressources/Images/favicon.ico"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -45,7 +45,7 @@
         <p>Nous sommes le café étudiant de sciences biologiques de l'UDEM, 
         un organisme sans but lucratif qui dépend entierement de ses bénévoles.
         Notre mission est de servir du bon café à bas prix aux etudiants fatigués.
-        Venez nous visiter et découvrez tous nos produits à bas prix.</p>
+        Venez nous visiter et découvrez tous nos produits à bas prix...</p>
         <button class="mission-button" onclick="location.href='benevoles.html'">Devenir bénévole</button>
     </div>
 </div>
