--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>Nous sommes le café étudiant de sciences biologiques de l'UDEM, 
         un organisme sans but lucratif qui dépend entierement de ses bénévoles.
         Notre mission est de servir du bon café à bas prix aux etudiants fatigués.
-        Venez nous visiter et découvrez tous nos produits à bas prix.</p>
+        Venez nous visiter et découvrez tous nos produits à bas prix....</p>
         <button class="mission-button" onclick="location.href='benevoles.html'">Devenir bénévole</button>
     </div>
 </div>
